--- a/client-participation/package.json
+++ b/client-participation/package.json
@@ -20,6 +20,7 @@
     "express": "~4.6.1",
     "glob": "^7.1.2",
     "gulp": "~3.8.6",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-scp2": "^0.2.0",
     "handlebars": "~1.3.0",
