Add template END variables for push notification

--- a/server/docker-dev.env
+++ b/server/docker-dev.env
@@ -33,3 +33,6 @@ AWS_REGION=us-east-1
 # Example: `aws-ses,mailgun` would try sending via AWS SES first, and fallback to Mailgun on error.
 EMAIL_TRANSPORT_TYPES=maildev
 POLIS_FROM_ADDRESS="Example <team@example.com>"
+
+WEBPUSH_PUBLIC_KEY=xxxxxxxxxxxxxxxxxxxxxxx
+WEBPUSH_PRIVATE_KEY=xxxxxxxxxxxxxxxxxxxxxxx
