--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,8 @@
     "intercom-client": "2.9.4",
     "intercom.io": "1.5.0",
     "lru-cache": "3.0.0",
+    "urlsafe-base64" : "1.0.0",
+    "web-push": "3.4.4",
     "mimelib": "0.2.19",
     "nodemailer": "^6.4.6",
     "nodemailer-mailgun-transport": "^2.0.0",
